made meeup boxes responsive to content

--- a/html/meetups2.html
+++ b/html/meetups2.html
@@ -17,9 +17,9 @@
     <nav id="top-section">
       <ul>
         <img id="logo" src="../images/logo2.png">
-  
+
         <li><a class="nav-item nav-link" href="../index.html">Sign Out</a></li>
-        <li><a class="nav-item nav-link" href="dropofftype.html">Drop Off</a></li>
+        <li><a class="nav-item nav-link" href="dropOffDetails.html" id="dropoff">Drop Off</a></li>
         <li><a class="nav-item nav-link" href="pickuptype.html">Pick Up</a></li>
         <li><a class="nav-item nav-link" href="home.html">Home</a></li>
       </ul>
