changed swipe cards to have responsive height

--- a/html/ItemTemplate.html
+++ b/html/ItemTemplate.html
@@ -14,7 +14,7 @@
     <div class="overlay">
       <script id="entry-template" type="text/x-handlebars-template">
         <h2  class ="title"> {{name}} </h2>
-          <div>
+          <div class="iteminfo">
             <!--<div class="profile">
               <a href="userProfile.html" target="_blank" class="userinfo" id="seller">Seller: {{seller}}</a>
               <p id="rate">&starf; &starf; &starf; &starf; &starf;</p>
