--- a/html/meetups2.html
+++ b/html/meetups2.html
@@ -29,7 +29,7 @@
     <!--CARDS-->
     <script id="entry-template" type="text/x-handlebars-template">
       <div class="card">
-        <p class="title"> {{name}} from Jerrica! </p>
+        <p class="title"> {{name}} </p>
         <div class="details">
           <p> Time: {{startTime}} - {{endTime}} </p>
           <p> Location: {{location}} </p>
@@ -48,7 +48,7 @@
     <div id="nomatches">
       <p class="title"> You have no matches yet!</p>
       <p>You can match with items through the Pick Up page.</p>
-      <a class="btn" href="pickuptype.html">Let's go!</a>
+      <a class="btn" id="letsgo" href="pickuptype.html">Let's go!</a>
     </div>
 
 
