--- a/html/match.html
+++ b/html/match.html
@@ -19,7 +19,7 @@
 
         <!--SELLER BUTTON-->
         <div class="row justify-content-center">
-          <a href=""  class="btn btn-outline-dark btn-lg btn-block" id="name2">Food: {{name}}</a>
+          <p id="name2">Food: {{name}}</p>
         </div>
 
         <!--PHOTO OF ITEM-->
@@ -37,6 +37,11 @@
           <div class = "info col-lg-4 " id = "time">
             <p>{{startTime}} - {{endTime}}</p>
           </div>
+        </div>
+
+        <!--CONTINUE SHOPPING-->
+        <div>
+          <btn class="btn" id="shop">Continue Shopping</btn>
         </div>
 
         <!--HOME BUTTON-->
