stylized button on match page

--- a/html/match.html
+++ b/html/match.html
@@ -40,8 +40,8 @@
         </div>
 
         <!--CONTINUE SHOPPING-->
-        <div>
-          <btn class="btn" id="shop">Continue Shopping</btn>
+        <div class="shop">
+          <btn class="btn" id="shop">See More Choices</btn>
         </div>
 
         <!--HOME BUTTON-->
