added name to about page

--- a/html/about.html
+++ b/html/about.html
@@ -10,7 +10,7 @@
 
   <body>
     <div class="overlay">
-      <h1 class="title">Our Aim</h1>
+      <h1 class="title">CiaoChow's Aim</h1>
       <div class="description">
         <p>In the United States alone, about 150,000 pounds of food are thrown
          away each day. Food waste is a prevalent problem, whether it is
