--- a/html/match.html
+++ b/html/match.html
@@ -41,7 +41,7 @@
 
         <!--CONTINUE SHOPPING-->
         <div class="shop">
-          <btn class="btn" id="shop">See More Choices</btn>
+          <btn class="btn" id="shop" onClick="more();">See More Choices</btn>
         </div>
 
         <!--HOME BUTTON-->
