--- a/html/noMatch.html
+++ b/html/noMatch.html
@@ -18,7 +18,7 @@
 
           <div class="row justify-content-center">
             <div class="col col-lg-10 text-center" id = "sorry" >
-              <p> Sorry you couldn't find a match! Please try a new search!</p>
+              <p> You either saw all your options, or need to try a new search!</p>
             </div>
           </div>
           <!--HOME BUTTON-->
