lots of navbars

--- a/html/dropOffTime.html
+++ b/html/dropOffTime.html
@@ -7,11 +7,22 @@
   </head>
 
   <body>
+    <!--NAVIGATION-->
+    <nav id="top-section">
+      <ul>
+        <img id="logo" src="../images/logo2.png">
+
+        <li><a class="nav-item nav-link" href="../index.html">Sign Out</a></li>
+        <li><a class="nav-item nav-link" href="meetups2.html">Meetups</a></li>
+        <li><a class="nav-item nav-link" href="pickuptype.html">Pickup</a></li>
+        <li><a class="nav-item nav-link" href="home.html">Home</a></li>
+      </ul>
+    </nav>
     <div class="container">
       <div class = "overlay">
         <div class="row justify-content-center">
           <div class="col col-lg-10 text-left" id = "dropdown" >
-            <p id = "phrase">Please select a pick up time range:</p>
+            <p id = "phrase">Please select a drop off time range:</p>
             <div id = "val">
               <select name = "drop" id="starthour">
                 <option value = "null"> -- </option>
