--- a/html/dropofftype.html
+++ b/html/dropofftype.html
@@ -7,6 +7,17 @@
   </head>
 
   <body>
+    <nav id="top-section">
+      <ul>
+        <img id="logo" src="../images/logo2.png">
+
+        <li><a class="nav-item nav-link" href="../index.html">Sign Out</a></li>
+        <li><a class="nav-item nav-link" href="meetups2.html">Meetups</a></li>
+        <li><a class="nav-item nav-link" href="dropOffDetails.html" id="dropoff">Drop Off</a></li>
+        <li><a class="nav-item nav-link" href="home.html">Home</a></li>
+      </ul>
+    </nav>
+
     <div class="container">
       <div class="overlay" id="drop_overlay">
         <div class="row justify-content-center">
