--- a/html/preview.html
+++ b/html/preview.html
@@ -18,7 +18,7 @@
         <p class="userinfo" id="allergens">Allergens: Eggs</p>
       </div>
 
-      <div>
+      <div id="somebuttons">
         <a href="dropOffDetails.html" class="btn btn-dark userinfo" id="back">Edit Item</a>
         <a href="home.html" class="btn btn-dark userinfo" id="submit">Submit</a>
       </div>
