--- a/html/dropofftype.html
+++ b/html/dropofftype.html
@@ -9,7 +9,7 @@
   <body>
     <nav id="top-section">
       <ul>
-        <img id="logo" src="../images/logo2.png">
+        <img id="logo" src="../images/alternatelogo.png">
 
         <li><a class="nav-item nav-link" href="../index.html">Sign Out</a></li>
         <li><a class="nav-item nav-link" href="meetups2.html">Meetups</a></li>
@@ -22,7 +22,7 @@
       <div class="overlay" id="drop_overlay">
         <div class="row justify-content-center">
           <div class="col col-lg-10" id="pickuptype">
-            <p class="title">WHICH TYPE OF FOOD WOULD YOU LIKE TO DROP OFF?</p>
+            <p class="title">WHICH TYPE OF FOOD ARE YOU DROPPING OFF?</p>
             <form>
               <p class="ps"> <input type=radio name="ps" id="produce"> Produce </p>
               <p class="ps"> <input type=radio name="ps" id="packaged"> Packaged </p>
