--- a/html/dropOffTime.html
+++ b/html/dropOffTime.html
@@ -10,7 +10,7 @@
     <!--NAVIGATION-->
     <nav id="top-section">
       <ul>
-        <img id="logo" src="../images/logo2.png">
+        <img id="logo" src="../images/alternatelogo.png">
 
         <li><a class="nav-item nav-link" href="../index.html">Sign Out</a></li>
         <li><a class="nav-item nav-link" href="meetups2.html">Meetups</a></li>
