--- a/html/meetups2.html
+++ b/html/meetups2.html
@@ -16,7 +16,7 @@
     <!--NAVIGATION-->
     <nav id="top-section">
       <ul>
-        <img id="logo" src="../images/logo2.png">
+        <img id="logo" src="../images/alternatelogo.png">
 
         <li><a class="nav-item nav-link" href="../index.html">Sign Out</a></li>
         <li><a class="nav-item nav-link" href="dropOffDetails.html" id="dropoff">Drop Off</a></li>
