--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!--overall box containing options-->
     <div class="overlay">
-      <img src="images/logo2.png" id="logo">
+      <img src="images/alternatelogo.png" id="logo">
       <!--<p class="title">Login</p>-->
       <br />
 
